qt4-x11 (4:4.8.6+dfsg-1) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream release.
  * Also add ppc64 to the list of non-pch build archs. Thanks Hiroyuki Yamamoto
    for the tip.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 11 Mar 2014 12:38:06 -0300

qt4-x11 (4:4.8.5+git242-g0315971+dfsg-2) unstable; urgency=medium

  * Update symbols files with buildd's and current build logs.
  * Add powerpc to the list of archs that will not build with precompiled
    headers. The last upload FTBFS due to a pch problem, reproducible in a
    porter box. I have mailed debian-powerpc informing them of the situation.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 10 Mar 2014 14:32:08 -0300

qt4-x11 (4:4.8.5+git242-g0315971+dfsg-1) unstable; urgency=medium

  * New upstream git snapshot.
  * Make rm verbose. In this way it's easier to audit the build.
  * Override lintian's old autotools helpers files warnings, we are not
    using them, tested by patching them away and rebuilding. Actually we are
    using the system's version of the involved libs.
  * Update symbols files with buildd's logs.
  * Install new translations.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 08 Mar 2014 21:00:55 -0300

qt4-x11 (4:4.8.5+git209-g718fae5+dfsg-1) unstable; urgency=medium

  [ Dmitry Shachnev ]
  * Remove Ubuntu-specific code to add armel to armv6_architectures.
    Ubuntu no longer supports armel.
  * Also remove Ubuntu-specific translations code, dropped in Ubuntu
    in version 4:4.8.4+dfsg-0ubuntu8.

  [ Pino Toscano ]
  * Change the libicu48 suggestion in libqtcore4 to libicu52.
    (Closes: #734514)

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream git snapshot.
  * Update symbols files with buildd's and current build's logs.
  * Update Standards-Version to 3.9.5, no changes required.
  * Remove commented out AddSense script from static webpage to keep lintian
    calm.
