@@ -17,7 +17,7 @@ Last-Update: 2012-04-25
 
 --- a/src/corelib/kernel/qcoreapplication.cpp
 +++ b/src/corelib/kernel/qcoreapplication.cpp
-@@ -2520,6 +2520,23 @@ QStringList QCoreApplication::libraryPat
+@@ -2529,6 +2529,23 @@ QStringList QCoreApplication::libraryPat
              if (!app_libpaths->contains(installPathPlugins))
                  app_libpaths->append(installPathPlugins);
          }
