@@ -11,7 +11,7 @@ Last-Update: 2011-04-27
 
 --- a/configure
 +++ b/configure
-@@ -3311,6 +3311,12 @@ if [ -z "${CFG_HOST_ARCH}" ]; then
+@@ -3317,6 +3317,12 @@ if [ -z "${CFG_HOST_ARCH}" ]; then
              ;;
          esac
          ;;
